Fix art portfolio image positioning on mobile screens
- Increased left margin from 1.77% to 3% for better centering
- Applied to both portfolioimage and portfolioimage1 classes
- Images should now be better positioned on narrow screens

--- a/style.css
+++ b/style.css
@@ -177,9 +177,9 @@ hr {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: -2.7em;
+    margin-top: 0.5em;
     padding: 0 2em;
-    width: 60%;
+    width: 30%;
     margin-left: auto;
     margin-right: auto;
   }
@@ -663,7 +663,7 @@ h4 {
                 height: 30%;
                 min-height: 60px;
                 max-width: 1300px;
-                margin-left: 1.77%;
+                margin-left: 3%;
             }
 
             .portfolioimage1:hover {
@@ -677,7 +677,7 @@ h4 {
                 height: 30%;
                 min-height: 60px;
                 max-width: 1300px;
-                margin-left: calc(1.77%);
+                margin-left: calc(3%);
             }
 
             .portfolioimage:hover {
